# haskell_wreq_workshop

./: README.md  api.cabal  stack.yaml
app/: Main.hs
docs/: haskell.key
src/: Lib.hs
