name:                api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2015 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.4 && < 0.5
                     , aeson >= 0.9.0.1 && < 0.11
                     , lens >= 4.13 && < 4.14
                     , lens-aeson >= 1.0 && < 1.1
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, DeriveGeneric

executable api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.4 && < 0.5
                     , aeson >= 0.9.0.1 && < 0.11
                     , lens >= 4.13 && < 4.14
                     , lens-aeson >= 1.0 && < 1.1
                     , api
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, DeriveGeneric

test-suite api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.4 && < 0.5
                     , aeson >= 0.9.0.1 && < 0.11
                     , lens >= 4.13 && < 4.14
                     , lens-aeson >= 1.0 && < 1.1
                     , api
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, DeriveGeneric

source-repository head
  type:     git
  location: https://github.com/githubuser/api
